# newsletter

./: .dockerignore  .env  .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  Dockerfile  README.md  spec.yaml  sqlx-data.json
.github/workflows/: ci_and_cd.yml  scheduled_audit.yml  scheduled_deploy.yml
configuration/: base.toml  local.toml  production.toml
migrations/: 20210320145201_create_subscriptions_table.sql  20210321204213_create_subscriptions_table.sql  20210512201254_add_status_to_subscriptions.sql  20210512201337_make_status_required_in_subscriptions.sql  20210512203435_create_subscription_tokens_table.sql  20210911133558_create_users_table.sql  20210911144932_rename_password_hash_of_user.sql
scripts/: init_db.sh
src/: app.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  routes.rs  startup.rs
src/app/: configuration.rs  startup.rs  telemetry.rs
src/domain/: app_base_url.rs  errors.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/email_client/: client.rs  errors.rs  request.rs
src/routes/: errors.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
