[package]
name = "newsletter"
version = "0.1.0"
authors = ["angelo catalani <catalaniangelo@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
actix-web = "4.0.0-beta.5"
anyhow = "~1.0.40"
config = "~0.11"
chrono = "~0.4"
custom_error = "~1.9"
derivative = "~2.2"
thiserror = "~1.0.24"
env_logger = "~0.8"
log = "~0.4"
rayon = "1.5.1"
rand = { version = "0.8", features = ["std_rng"] }
reqwest = { version = "~0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sqlx = { version = "~0.5", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
tokio = { version = "1.13", features = ["sync", "time"] }
tracing = { version = "~0.1", features = ["log"] }
tracing-bunyan-formatter = "~0.2.4"
tracing-futures = "~0.2"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-actix-web = "0.4.0-beta.4"
url = { version = "2", features = ["serde"] }
uuid = { version = "~0.8", features = ["v4"] }
unicode-segmentation = "~1.7"
validator = "0.13.0"
base64 = "0.13.0"
argon2 = { version = "0.3.0", features = ["std"] }

[dev-dependencies]
actix-rt = "~2"
claim = "0.5"
fake = "~2.3"
lazy_static = "~1.4"
linkify = "0.5.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
reqwest = "~0.11"
tokio = { version = "1.13", features = ["net", "macros", "rt"] }
wiremock = "0.5.6"

